# rust-io-peek

./: Cargo.toml  README.md
futures-util-io-peek/: Cargo.toml  README.md
futures-util-io-peek/src/: lib.rs  lib_io.rs
futures-util-io-peek/tests/: async_io_async.rs  async_std_tcp_stream.rs  cursor.rs  smol_async.rs  tokio_tcp_stream.rs
std-io-peek/: Cargo.toml  README.md
std-io-peek/src/: lib.rs
std-io-peek/tests/: cursor.rs  tcp_stream.rs
