[package]
name = "futures-util-io-peek"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "AsyncPeek trait"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/vkill/rust-io-peek"
homepage = "https://github.com/vkill/rust-io-peek"
documentation = "https://docs.rs/futures-util-io-peek"
keywords = ["peek"]
categories = []
readme = "README.md"

[features]
async_io_async = ["async-io"]
smol_async = ["smol"]
async_std_tcp_stream = ["async-std"]
tokio_tcp_stream = ["tokio"]

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["io"] }

async-io = { version = "0.1", default-features = false, features = [], optional = true }
smol = { version = "0.1", default-features = false, features = [], optional = true }
async-std = { version = "1", default-features = false, features = ["default"], optional = true }
tokio = { version = "0.2", default-features = false, features = ["tcp"], optional = true }

[dev-dependencies]
futures-executor = { version = "0.3", default-features = false, features = ["default"] }
tokio = { version = "0.2", default-features = false, features = ["tcp", "stream", "io-util"] }
