[package]
name = "std-io-peek"
version = "0.2.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Peek trait"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/vkill/rust-io-peek"
homepage = "https://github.com/vkill/rust-io-peek"
documentation = "https://docs.rs/std-io-peek"
keywords = ["peek"]
categories = []
readme = "README.md"
